# H1scopeagent

./: .env.example  .gitignore  LICENSE  README.md  config.py  daemon.py  main.py  pyproject.toml  requirements.txt
attack/: verifier.py
browser/: chromium.py  scout.py  screenshot.py
db/: database.py  models.py
docs/: architecture.md  cli.md  env-vars.md  extending.md  schema.md  testing.md
examples/: custom_detector.py  quickstart.py  report_template.py
findings/: dedupe.py  detector.py
h1scopeagent/: __init__.py  config.py  daemon.py  main.py
h1scopeagent/api/: hackerone.py
h1scopeagent/attack/: decision.py  engine.py  submitter.py
h1scopeagent/browser/: chromium.py  metadata.py  scout.py
h1scopeagent/db/: database.py  models.py
h1scopeagent/findings/: models.py  scorer.py
h1scopeagent/policy/: summarizer.py
h1scopeagent/recon/: executor.py  passive.py  planner.py  tools.py
h1scopeagent/reports/: generator.py
h1scopeagent/scope/: validator.py
logs/: audit.py
migrations/: 001_init.sql  002_scan_runs.sql
profiles/: deep.toml  default.toml  fast.toml  passive-only.toml
recon/: command_guard.py  runner.py
scope/: parser.py
tests/: test_autonomous_safety.py  test_browser_scout.py  test_config.py  test_finding_scoring.py  test_policy_parser.py  test_scope_validator.py
