[project]
name = "h1scopeagent"
version = "0.1.0"
description = "Authorized HackerOne bug bounty assistant — autonomous non-invasive reconnaissance and Chromium scouting"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "H1ScopeAgent"},
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "playwright>=1.43",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
h1scope = "h1scopeagent.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["h1scopeagent", "h1scopeagent.*"]
exclude = ["data", "data.*", "tests", "tests.*", "examples", "examples.*", "docs", "docs.*"]
